@@ -224,6 +224,8 @@ class digraph (object):
             self.node_incidence[v].append(u)
             self.edge_properties[(u, v)] = [label, wt]
             self.edge_attr[(u, v)] = attrs
+        else:
+            raise AdditionError
 
 
     def del_node(self, node):
@@ -478,7 +480,8 @@ class digraph (object):
             if each_node not in self.nodes():
                 self.add_node(each_node)
             for each_edge in graph.neighbors(each_node):
-                self.add_edge(each_node, each_edge)
+                if (not self.has_edge(each_node, each_edge)):
+                    self.add_edge(each_node, each_edge)
 
 
     def add_spanning_tree(self, st):
